--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -39,7 +39,7 @@ body {
   color: transparent;
 
   &:hover {
-    transform: skewY(2deg) skewX(15deg) scale(1.1);
+    transform: translate(2rem, -2rem);
     text-shadow: 0.5rem 1rem 2rem rgba($color-black, 0.2);
   }
 }
