--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,7 +1,13 @@
 @import "abstracts/variables.scss";
 @import "abstracts/mixins.scss";
 @import "abstracts/animations.scss";
+@import "abstracts/utilities.scss";
 
 @import "base/typography.scss";
 
 @import "layout/header.scss";
+@import "layout/grid.scss";
+
+@import "pages/home.scss";
+
+@import "components/composition.scss";
