--- a/src/sass/abstracts/_utilities.scss
+++ b/src/sass/abstracts/_utilities.scss
@@ -14,6 +14,10 @@
   margin-bottom: 1.5rem !important;
 }
 
+.u-margin-top-small {
+  margin-top: 4rem !important;
+}
+
 .u-margin-top-big {
   margin-top: 8rem !important;
 }
