--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,3 +11,5 @@
 @import "pages/home.scss";
 
 @import "components/composition.scss";
+@import "components/card.scss";
+@import "components/button.scss";
