--- a/src/App.css
+++ b/src/App.css
@@ -121,7 +121,7 @@ body {
 
 .header {
   height: 80vh;
-  background-image: linear-gradient(to right bottom, rgba(94, 124, 226, 0.8), rgba(10, 54, 157, 0.8)), url("../../assets/hero.png");
+  background-image: linear-gradient(to right bottom, rgba(17, 17, 17, 0.9), #222222), url("../../assets/hero.png");
   background-size: cover;
   background-position: top;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 60vh, 0 100%);
@@ -179,6 +179,52 @@ body {
 }
 .row .col-3-of-4 {
   width: calc( 3 * ((100% - (3 * 6rem)) / 4) + (2 * 6rem) );
+}
+
+.footer {
+  background-color: #333;
+  padding: 10rem 0;
+  font-size: 1.4rem;
+  color: #f7f7f7;
+}
+.footer__logo-box {
+  text-align: center;
+  margin-bottom: 8rem;
+}
+.footer__logo {
+  width: 15rem;
+  height: auto;
+}
+.footer__navigation {
+  border-top: 1px solid #777;
+  padding-top: 2rem;
+  display: inline-block;
+}
+.footer__list {
+  list-style: none;
+}
+.footer__item {
+  display: inline-block;
+}
+.footer__item:not(:last-child) {
+  margin-right: 1.5rem;
+}
+.footer__link:link, .footer__link:visited {
+  color: #f7f7f7;
+  background-color: #333;
+  text-decoration: none;
+  text-transform: uppercase;
+  display: inline-block;
+  transition: all 0.2s;
+}
+.footer__link:hover, .footer__link:active {
+  color: #4472ca;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
+  transform: rotate(5deg) scale(1.05);
+}
+.footer__copyright {
+  width: 80%;
+  float: right;
 }
 
 .section-about {
