--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -15,6 +15,8 @@ $color-grey-light-2: #eee;
 $color-grey-dark: #777;
 $color-grey-dark-2: #999;
 $color-grey-dark-3: #333;
+$color-grey-dark-4: #222222;
+$color-grey-dark-5: #111111;
 
 $color-white: #fff;
 $color-black: #000;
