--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -2,8 +2,8 @@
   height: 80vh;
   background-image: linear-gradient(
       to right bottom,
-      rgba($color-primary-light, 0.8),
-      rgba($color-primary-dark, 0.8)
+      rgba($color-grey-dark-5, 0.9),
+      rgba($color-grey-dark-4, 1)
     ),
     url("../../assets/hero.png");
   background-size: cover;
