--- a/src/App.css
+++ b/src/App.css
@@ -480,4 +480,24 @@ body {
   transform: translateY(0);
 }
 
+.cart__button {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  height: 7rem;
+  width: 7rem;
+  position: fixed;
+  top: 6rem;
+  right: 6rem;
+  border-radius: 50%;
+  z-index: 2000;
+  box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
+  text-align: center;
+  cursor: pointer;
+  font-size: 3rem;
+  text-align: center;
+}
+
 /*# sourceMappingURL=App.css.map */
