--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,3 +14,4 @@
 @import "components/composition.scss";
 @import "components/card.scss";
 @import "components/button.scss";
+@import "components/cart.scss";
