--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,11 +1,10 @@
 .header {
   height: 80vh;
   background-image: linear-gradient(
-      to right bottom,
-      rgba($color-grey-dark-5, 0.9),
-      rgba($color-grey-dark-4, 1)
-    ),
-    url("../../assets/hero.png");
+    to right bottom,
+    rgba($color-grey-dark-5, 0.9),
+    rgba($color-grey-dark-4, 1)
+  );
   background-size: cover;
   background-position: top;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 60vh, 0 100%);
