--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -14,12 +14,13 @@
 
   &__logo-box {
     position: absolute;
-    top: 4rem;
-    left: 4rem;
+    top: 35rem;
+    left: 49rem;
   }
 
   &__logo {
-    height: 3.5rem;
+    height: 150.5rem;
+    animation: moveInBottomPlus ease-out 2s;
   }
 
   &__text-box {
