--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -70,29 +70,26 @@
 
     &--1 {
       background-image: linear-gradient(
-          to right bottom,
-          $color-secondary-light,
-          $color-secondary-dark
-        ),
-        url(../../img/item1.jpg);
+        to right bottom,
+        $color-secondary-light,
+        $color-secondary-dark
+      );
     }
 
     &--2 {
       background-image: linear-gradient(
-          to right bottom,
-          $color-primary-light,
-          $color-primary-dark
-        ),
-        url(../../img/nat-6.jpg);
+        to right bottom,
+        $color-primary-light,
+        $color-primary-dark
+      );
     }
 
     &--3 {
       background-image: linear-gradient(
-          to right bottom,
-          $color-tertiary-light,
-          $color-tertiary-dark
-        ),
-        url(../../img/nat-7.jpg);
+        to right bottom,
+        $color-tertiary-light,
+        $color-tertiary-dark
+      );
     }
   }
 
